--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&family=Montserrat:ital,wght@0,200;0,300;0,500;0,600;1,100;1,200;1,300;1,500&display=swap");
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Fredoka One", cursive;
   background: #373b44; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to left,
@@ -66,12 +66,22 @@ h1 {
 }
 
 h4 {
+  font-family: "Fredoka One", cursive;
   display: flex;
   justify-content: center;
   color: #f9f9f9;
 }
 
 .foo {
+  display: flex;
+  justify-content: space-evenly;
+  color: #373b44;
+  font-size: 30px;
   height: 100px;
   background-color: cornflowerblue;
+}
+
+.separar {
+  margin-top: 40px;
+  margin-left: 10px;
 }
